whitespace fix

--- a/css/forum.css
+++ b/css/forum.css
@@ -22,7 +22,6 @@
 .forum_content_listitem{
 	min-height: 0;
 	margin-bottom: 8px;
-	
 }
 
 .forum_content_listitem  a{
@@ -176,11 +175,6 @@
 	
 }
 
-/**************************************
-	PAGINATION FORUMPOST
-***************************************/
-
-
 
 /****************************
  * BUTTONPANEL
@@ -190,7 +184,7 @@
 	
 }
 
- #forum_content h2{
+#forum_content h2{
  	display: inline-block;
  	font-weight: bold;
  	font-size: 120%;
